Bug 546913 Trunk builds without Places failing due to not being able to initialise the IHistory service. r/sr=bienvenu,a=TB trunk bustage fix (only affects trunk builds)